Add styling to particles.js

--- a/about.html
+++ b/about.html
@@ -3,16 +3,16 @@ layout: page
 title: About
 permalink: /about/
 ---
-<div class="about">
-    {% image yueh.jpg alt="Yueh" class="avatar" %}
-    <div class="social-links">
-        <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/YuYuehLiu"><i class="icon fa fa-facebook"
-                aria-hidden="true"></i></a>
-        <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/yu-yueh-liu-667696121/"><i class="icon fa fa-linkedin"
-                aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="https://github.com/UAce"><i class="icon fa fa-github-alt"
-                aria-hidden="true"></i></a>
-        <a aria-label="Send email" href="mailto:yu-yueh@hotmail.com"><i class="icon fa fa-envelope"></i></a>
-    </div>
-    blahblahblah ... something about me :) 🐢
+<div class="about" id="about">
+        {% image yueh.jpg alt="Yueh" class="avatar" %}
+        <div class="social-links">
+                <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/YuYuehLiu"><i class="icon fa fa-facebook"
+                                aria-hidden="true"></i></a>
+                <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/yu-yueh-liu-667696121/"><i
+                                class="icon fa fa-linkedin" aria-hidden="true"></i></a>
+                <a aria-label="My Github" target="_blank" href="https://github.com/UAce"><i class="icon fa fa-github-alt"
+                                aria-hidden="true"></i></a>
+                <a aria-label="Send email" href="mailto:yu-yueh@hotmail.com"><i class="icon fa fa-envelope"></i></a>
+        </div>
+        blahblahblah ... something about me :) 🐢
 </div>
