Add resume and styling

--- a/about.html
+++ b/about.html
@@ -14,5 +14,7 @@ permalink: /about/
                                 aria-hidden="true"></i></a>
                 <a aria-label="Send email" href="mailto:yu-yueh@hotmail.com"><i class="icon fa fa-envelope"></i></a>
         </div>
-        blahblahblah ... something about me :) 🐢
+        <div class="a_center">
+                <p>blahblahblah ... something about me :) 🐢</p>
+        </div>
 </div>
