--- a/resume.html
+++ b/resume.html
@@ -4,120 +4,108 @@ title: Resume
 permalink: /resume/
 ---
 <div class="resume" id="resume">
-    <table>
-        <tbody>
-            <tr>
-                <th rowspan="3" scope="rowgroup" class="resume_title w1-3">Technologies</th>
-                <th scope="row" class="resume_subtitle">Comfortable with</th>
-                <th scope="row" class="resume_subtitle">Experience with</th>
-            </tr>
-            <tr>
-                <th scope="row">
-                    <ul>
-                        <li>
-                            Java
-                        </li>
-                        <li>
-                            Python
-                        </li>
-                        <li>
-                            Javascript
-                        </li>
-                        <li>
-                            HTML5 / CSS3
-                        </li>
-                        <li>
-                            GIT Version Control
-                        </li>
-                        <li>
-                            Windows / Linux / UNIX operating systems
-                        </li>
-                    </ul>
-                </th>
-                <th scope="row">
-                    <ul>
-                        <li>
-                            C / C++
-                        </li>
-                        <li>
-                            Bash / Groovy
-                        </li>
-                        <li>
-                            SQL
-                        </li>
-                        <li>
-                            Full Stack (AngularJS / Flask / Jinja2, ReactJS / NodeJS)
-                        </li>
-                        <li>
-                            Native Android Development
-                        </li>
-                        <li>
-                            Infrastructure as Code (Ansible, Chef)
-                        </li>
-                        <li>
-                            Continuous Integration (Jenkins, TravisCI)
-                        </li>
-                    </ul>
-                </th>
-            </tr>
-        </tbody>
-    </table>
-    <table>
-        <tbody>
-            <tr>
-                <th rowspan="2" scope="rowgroup" class="resume_title w1-3">Work Experience</th>
-            </tr>
-            <tr>
-                <th scope="row">
-                    <div class="work_exp">
-                        <h2 class="resume_subtitle">System Administrator DevOps Intern</h2>
-                        <span class="resume_company"><a>Broadsign</a>, Montreal, CA, September 2018 – April 2019</span>
-                        <p>
-                            Researched and created a proof of concept for centralized logging management solutions
-                            using AWS CloudWatch. Integrated functionality to dynamically create CloudWatch agent
-                            configuration files per application using ERB templates into existing Chef cookbooks.
-                            Wrote Terraform and Cloudformation scripts to provision AWS resources.
-                        </p>
-                    </div>
-                    <div class="work_exp">
-                        <h2 class=" resume_subtitle">DevOps Intern</h2>
-                        <span class="resume_company"><a>Ericsson Inc.</a>, Montreal, CA, January 2018 – April 2018</span>
-                        <p>
-                            Provisioned virtual machines for testing purposes with Ansible. Created and set up Docker
-                            containers for functional testings. Wrote Jenkins 2 declarative pipeline scripts (groovy)
-                            to automate the build, integration and deployment. Wrote bash scripts to automate the
-                            generation of daily reports for the overnight stress testings.
-                        </p>
-                    </div>
-                    <div class="work_exp">
-                        <h2 class=" resume_subtitle">Software Engineering Intern</h2>
-                        <span class="resume_company"><a>Bombardier Transportation</a>
-                            , Montreal, CA, May 2017 – August 2017</span>
-                        <p>
+    <div class="resume_wrapper">
+        <div class="row">
+            <div class="title w1-3">
+                <h1 class="resume_title" id="technologies">Technologies</h1>
+            </div>
+            <div class=" column w1-3">
+                <h2 class="resume_subtitle">Comfortable with</h2>
+                <ul>
+                    <li>
+                        Java
+                    </li>
+                    <li>
+                        Python
+                    </li>
+                    <li>
+                        Javascript
+                    </li>
+                    <li>
+                        HTML5 / CSS3
+                    </li>
+                    <li>
+                        GIT Version Control
+                    </li>
+                    <li>
+                        Windows / Linux / UNIX operating systems
+                    </li>
+                </ul>
+            </div>
+            <div class="column w1-3">
+                <h2 class="resume_subtitle">Experience with</h2>
+                <ul>
+                    <li>
+                        C / C++
+                    </li>
+                    <li>
+                        Bash / Groovy
+                    </li>
+                    <li>
+                        SQL
+                    </li>
+                    <li>
+                        Full Stack (AngularJS / Flask / Jinja2, ReactJS / NodeJS)
+                    </li>
+                    <li>
+                        Native Android Development
+                    </li>
+                    <li>
+                        Infrastructure as Code (Ansible, Chef)
+                    </li>
+                    <li>
+                        Continuous Integration (Jenkins, TravisCI)
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="title w1-3">
+                <h1 class="resume_title" id="work_experience">Work Experience</h1>
+            </div>
+            <div class="column w2-3">
+                <div>
+                    <h2 class="resume_subtitle">System Administrator DevOps Intern</h2>
+                    <span class="resume_company"><a>Broadsign</a>, Montreal, CA, September 2018 – April 2019</span>
+                    <p class="work_exp">
+                        Researched and created a proof of concept for centralized logging management solutions
+                        using AWS CloudWatch. Integrated functionality to dynamically create CloudWatch agent
+                        configuration files per application using ERB templates into existing Chef cookbooks.
+                        Wrote Terraform and Cloudformation scripts to provision AWS resources.
+                    </p>
+                </div>
+                <div>
+                    <h2 class=" resume_subtitle">DevOps Intern</h2>
+                    <span class="resume_company"><a>Ericsson Inc.</a>, Montreal, CA, January 2018 – April 2018</span>
+                    <p class="work_exp">
+                        Provisioned virtual machines for testing purposes with Ansible. Created and set up Docker
+                        containers for functional testings. Wrote Jenkins 2 declarative pipeline scripts (groovy)
+                        to automate the build, integration and deployment. Wrote bash scripts to automate the
+                        generation of daily reports for the overnight stress testings.
+                    </p>
+                </div>
+                <div>
+                    <h2 class=" resume_subtitle">Software Engineering Intern</h2>
+                    <span class="resume_company"><a>Bombardier Transportation</a>
+                        , Montreal, CA, May 2017 – August 2017</span>
+                    <p class="work_exp">
 
-                        </p>
-                    </div>
-                </th>
-            </tr>
-        </tbody>
-    </table>
-    <table>
-        <tbody>
-            <tr>
-                <th rowspan="2" scope="rowgroup" class="resume_title w1-3">Education</th>
-            </tr>
-            <tr>
-                <th scope="row">
-                    <div>
-                        <h2 class="resume_subtitle">Bachelor of Software Engineering</h2>
-                        <span>McGill University, Montreal, CA, September 2015 – Present</span>
-                    </div>
-                </th>
-            </tr>
-        </tbody>
-    </table>
-</div>
-<div class="more">
-    <p class="add-margin">Feel free to reach out and start a conversation!</p>
-    <!-- <a target="_blank" class="button capitalize styled_title">Contact me</a target="_blank"> -->
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="title w1-3">
+                <h1 class="resume_title" id="education">Education</h1>
+            </div>
+            <div class="column w2-3">
+                <h2 class="resume_subtitle">Bachelor of Software Engineering</h2>
+                <span>McGill University, Montreal, CA, September 2015 – Present</span>
+            </div>
+        </div>
+    </div>
+    <div class="more">
+        <p class="add-margin">Feel free to reach out and start a conversation!</p>
+        <!-- <a target="_blank" class="button capitalize styled_title">Contact me</a target="_blank"> -->
+    </div>
 </div>
