--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ permalink: /404.html
 ---
 
 <style type="text/css" media="screen">
-  .container {
+  .container-404 {
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
@@ -18,7 +18,7 @@ permalink: /404.html
   }
 </style>
 
-<div class="container">
+<div class="container-404">
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
