--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 permalink: /about/
 ---
 <div class="about" id="about">
-        {% image yueh.jpg alt="Yueh" class="avatar" %}
+        {% image yueh.png alt="My picture" class="avatar" %}
         <div class="social-links">
                 <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/YuYuehLiu"><i class="icon fa fa-facebook"
                                 aria-hidden="true"></i></a>
@@ -14,7 +14,10 @@ permalink: /about/
                                 aria-hidden="true"></i></a>
                 <a aria-label="Send email" href="mailto:yu-yueh@hotmail.com"><i class="icon fa fa-envelope"></i></a>
         </div>
-        <div class="a_center">
-                <p>blahblahblah ... something about me :) 🐢</p>
+        <div class="wrapper">
+                <div class="about_section">
+                        <p>🐢</p>
+                </div>
         </div>
+
 </div>
