--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@ title: Home
 {% assign title = site.canvas.home %}
 {% assign tag = 'home' %}
 {% include canvas.html %}
-<div class="container a_center add-padding-top">
-    <h1 class="error capitalize">Under Construction...</h1>
+<div class="container text-center add-padding-top">
+    <h1 class="under_construction">Under Construction...</h1>
 </div>
-<div class="padder shade"></div>
