--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: 404 Not Found
 permalink: /404
 ---
 
@@ -19,8 +20,11 @@ permalink: /404
 </style>
 
 <div class="container-404">
+  <div class="padder-small"></div>
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
+  <div class="padder-small"></div>
+  <div class="padder-small"></div>
 </div>
