--- a/articles.html
+++ b/articles.html
@@ -3,3 +3,6 @@ layout: default
 title: Articles
 permalink: /articles
 ---
+<div class="container text-center add-padding-top">
+    <h1 class="under_construction">Under Construction...</h1>
+</div>
