--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@ permalink: /resume
             <h1 class="title" id="technologies">Technologies</h1>
         </div>
         {% for item in site.data.technologies %}
-        <div class="col-md-4 add-padding-left-small">
+        <div class="col-md-4 add-padding-left-normal">
             <h2 class="subtitle">{{ item.name }}</h2>
             <ul>
                 {% for subItem in item.list %}
