--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@ permalink: /resume
                     </a>
                     , {{ item.location }}, {{ item.period }}
                 </span>
-                <p class="description">
+                <p class="description text-left">
                     {{ item.description }}
                 </p>
             </div>
@@ -55,7 +55,7 @@ permalink: /resume
             {% for item in site.data.personal_projects %}
             <div class="{% if forloop.last %}{% else %} add-margin-bottom-large {% endif %}">
                 <h2 class="subtitle">{{ item.name }}</h2>
-                <p class="description">
+                <p class="description text-left">
                     {{ item.description }}
                 </p>
                 <div class="d-flex flex-wrap flex-row">
