--- a/about.html
+++ b/about.html
@@ -5,9 +5,10 @@ permalink: /about
 ---
 {% assign title = site.canvas.about %}
 {% assign tag = 'me' %}
+{% assign id = 3 %}
 {% include canvas.html %}
 <div class="about">
-    <div class="intro row hidden add-margin-huge add-padding-normal">
+    <div class="intro row hidden-right add-margin-huge add-padding-normal">
         <div class="col-md-4">
             {% image yueh.png alt="My picture" class="avatar img-fluid img-thumbnail" %}
         </div>
