--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@ permalink: /resume
 ---
 {% assign title = site.canvas.resume %}
 {% assign tag = 'resume' %}
+{% assign id = 2 %}
 {% include canvas.html %}
 <div id="resume" class="container-fluid add-margin-top-huge">
     <div class="row justify-content-start">
