--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Home
 ---
 {% assign title = site.canvas.home %}
 {% assign tag = 'home' %}
+{% assign id = 1 %}
 {% include canvas.html %}
 <div class="container text-center add-padding-top">
     <h1 class="under_construction">Under Construction...</h1>
