--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@ permalink: /about
 {% assign id = 3 %}
 {% include canvas.html %}
 <div class="about">
-    <div class="intro row hidden-right add-margin-huge add-padding-normal">
-        <div class="col-md-4">
+    <div class="intro row transition hidden-right m-auto add-padding-normal">
+        <div class="col-md-3 offset-md-2 align-self-center">
             {% image yueh.png alt="My picture" class="avatar img-fluid img-thumbnail" %}
         </div>
-        <div class="col-md-8 align-self-center intro-text text_left">
+        <div class="col-md-7 align-self-center intro-text text_left">
             <h1>Hi, I'm Yueh 🐢</h1>
             I'm a junior full stack developer and I have a life.
             <p>
@@ -20,12 +20,34 @@ permalink: /about
             </p>
         </div>
     </div>
-    <div class="row shade add-padding-normal">
-        <div class="col-md-8">
-
+    <div class="about-section row shade add-padding-normal">
+        <div class="col-md-5 offset-md-2 align-self-center transition hidden-right text_left">
+            <h2 class="add-padding-bottom-medium">About me:</h2>
+            <ul>
+                {% for item in site.data.about %}
+                <li>{{ item }}</li>
+                {% endfor %}
+            </ul>
         </div>
-        <div class="col-md-4">
-
+        <div class="col-md-4 transition hidden-left">
+            <a href="{{ "assets/images/about/travel.jpg" | relative_url }}" data-fancybox="images">
+                <img src="{{ "assets/images/about/travel.jpg" | relative_url }}" alt="Travel in Taiwan"
+                    class="img-fluid img-thumbnail">
+            </a>
+        </div>
+    </div>
+    <div class="about-section row add-padding-normal">
+        <div class="col-md-5 offset-md-1 align-self-center transition hidden-down">
+            <a href="{{ "assets/images/about/derp.jpg" | relative_url }}" data-fancybox="gallery">
+                <img src="{{ "assets/images/about/derp.jpg" | relative_url }}" alt="Picture with sis in Singapore"
+                    class="img-fluid img-thumbnail">
+            </a>
+        </div>
+        <div class="col-md-5 align-self-center transition hidden-up">
+            <a href="{{ "assets/images/about/group-picture.jpg" | relative_url }}" data-fancybox="gallery">
+                <img src="{{ "assets/images/about/group-picture.jpg" | relative_url }}" alt="Group picture in Malaysia"
+                    class="img-fluid img-thumbnail">
+            </a>
         </div>
     </div>
 </div>
