--- a/resume.html
+++ b/resume.html
@@ -62,7 +62,7 @@ permalink: /resume
                 <div class="d-flex flex-wrap flex-row">
                     {% for image in item.images %}
                     {% assign width = 1.0 | divided_by: forloop.length | times: 100 | round %}
-                    {% image {{ image.path }} alt="{{ image.alt }}" class="p-2 w-{{ width }}" %}
+                    <img src="{{ image.path }}" alt="{{ image.alt }}" class="p-1 w-{{ width }}">
                     {% endfor %}
                 </div>
             </div>
