Add pictures to gallery, increase logo size

--- a/about.html
+++ b/about.html
@@ -29,25 +29,61 @@ permalink: /about
                 {% endfor %}
             </ul>
         </div>
-        <div class="col-md-4 transition hidden-left">
-            <a href="{{ "assets/images/about/travel.jpg" | relative_url }}" data-fancybox="images">
-                <img src="{{ "assets/images/about/travel.jpg" | relative_url }}" alt="Travel in Taiwan"
+        <div class="col-md-5 transition hidden-left">
+            <a href="{{ "assets/images/about/travel.jpg" | relative_url }}" data-fancybox="images"
+                data-caption="Hutou Mountain Park in Taiwan">
+                <img src="{{ "assets/images/about/travel.jpg" | relative_url }}" alt="Hutou Mountain Park in Taiwan"
                     class="img-fluid img-thumbnail">
             </a>
         </div>
     </div>
-    <div class="about-section row add-padding-normal">
-        <div class="col-md-5 offset-md-1 align-self-center transition hidden-down">
-            <a href="{{ "assets/images/about/derp.jpg" | relative_url }}" data-fancybox="gallery">
-                <img src="{{ "assets/images/about/derp.jpg" | relative_url }}" alt="Picture with sis in Singapore"
-                    class="img-fluid img-thumbnail">
-            </a>
+    <div class="about-section add-padding-normal">
+        <div class="row">
+            <div class="col-md-4 p-3 align-self-center transition hidden-right">
+                <a href="{{ "assets/images/about/group-picture.jpg" | relative_url }}" data-fancybox="gallery"
+                    data-caption="Johor Bahru Forest City Sales Gallery in Malaysia">
+                    <img src="{{ "assets/images/about/group-picture.jpg" | relative_url }}"
+                        alt="Johor Bahru Forest City Sales Gallery in Malaysia" class="img-fluid img-thumbnail">
+                </a>
+            </div>
+            <div class="col-md-4 p-3 align-self-center transition hidden-down">
+                <a href="{{ "assets/images/about/derp.jpg" | relative_url }}" data-fancybox="gallery"
+                    data-caption="Singapore City Gallery">
+                    <img src="{{ "assets/images/about/derp.jpg" | relative_url }}" alt="Singapore City Gallery"
+                        class="img-fluid img-thumbnail">
+                </a>
+            </div>
+            <div class="col-md-4 p-3 align-self-center transition hidden-left">
+                <a href="{{ "assets/images/about/asakusa-group.jpeg" | relative_url }}" data-fancybox="gallery"
+                    data-caption="Sensō-ji in Tokyo, Asakusa">
+                    <img src="{{ "assets/images/about/asakusa-group.jpeg" | relative_url }}"
+                        alt="Sensō-ji in Tokyo, Asakusa" class="img-fluid img-thumbnail">
+                </a>
+            </div>
         </div>
-        <div class="col-md-5 align-self-center transition hidden-up">
-            <a href="{{ "assets/images/about/group-picture.jpg" | relative_url }}" data-fancybox="gallery">
-                <img src="{{ "assets/images/about/group-picture.jpg" | relative_url }}" alt="Group picture in Malaysia"
-                    class="img-fluid img-thumbnail">
-            </a>
+        <div class="row">
+            <div class="col-md-4 p-3 align-self-center transition hidden-right">
+                <a href="{{ "assets/images/about/otakuthon-performance.jpg" | relative_url }}" data-fancybox="gallery"
+                    data-caption="Otakuthon 2017 Opening Ceremony Performance">
+                    <img src="{{ "assets/images/about/otakuthon-performance.jpg" | relative_url }}"
+                        alt="Otakuthon 2017 Opening Ceremony Performance" class="img-fluid img-thumbnail">
+                </a>
+            </div>
+            <div class="col-md-4 p-3 align-self-center transition hidden-up">
+                <a href="{{ "assets/images/about/temple-camp.jpg" | relative_url }}" data-fancybox="gallery"
+                    data-caption="Kids' Science Camp at the Fo Guang Shan Montreal Flower Garland Temple">
+                    <img src="{{ "assets/images/about/temple-camp.jpg" | relative_url }}"
+                        alt="Kids' Science Camp at the Fo Guang Shan Montreal Flower Garland Temple"
+                        class="img-fluid img-thumbnail">
+                </a>
+            </div>
+            <div class="col-md-4 p-3 align-self-center transition hidden-left">
+                <a href="{{ "assets/images/about/violin-performance.jpg" | relative_url }}" data-fancybox="gallery"
+                    data-caption="Montreal I Have a Song 2016 performance">
+                    <img src="{{ "assets/images/about/violin-performance.jpg" | relative_url }}"
+                        alt="Montreal I Have a Song 2016 performance" class="img-fluid img-thumbnail">
+                </a>
+            </div>
         </div>
     </div>
 </div>
