--- a/articles.html
+++ b/articles.html
@@ -5,4 +5,12 @@ permalink: /articles
 ---
 <div class="container text-center add-padding-top">
     <h1 class="under_construction">Under Construction...</h1>
+    <ul>
+        {% for post in site.posts %}
+        <li>
+            <a href="{{ post.url }}">{{ post.title }}</a>
+            {{ post.excerpt }}
+        </li>
+        {% endfor %}
+    </ul>
 </div>
