--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@ title: Home
 {% assign tag = 'home' %}
 {% assign id = 1 %}
 {% include canvas.html %}
-<div class="container text-center add-padding-top">
-    <h1 class="under_construction">Under Construction...</h1>
+<div class="container  add-margin-top-large add-margin-bottom-large">
+    <h3 class="section-title">Recent Articles</h3>
+    <div class="d-flex flex-wrap row">
+        {% for post in site.posts %}
+        <div class="col-md-4 py-3 d-flex align-items-stretch">
+            {% include card.html post=post %}
+        </div>
+        {% endfor %}
+    </div>
+    <h1 class="under_construction text-center">Under Construction...</h1>
 </div>
