Remove card text-align center

--- a/articles.html
+++ b/articles.html
@@ -7,7 +7,7 @@ permalink: /articles
 {% assign tag = 'articles' %}
 {% assign id = 7 %}
 {% include canvas.html %}
-<div class="container text-center add-margin-top-large add-margin-bottom-large">
+<div class="container add-margin-top-large add-margin-bottom-large">
     <div class="d-flex flex-wrap row">
         {% for post in site.posts %}
         <div class="col-md-4 py-3 d-flex align-items-stretch">
@@ -15,5 +15,5 @@ permalink: /articles
         </div>
         {% endfor %}
     </div>
-    <h1 class="under_construction">Under Construction...</h1>
+    <h1 class="under_construction text-center">Under Construction...</h1>
 </div>
