update chrome extension post and add line numbers to code block

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ permalink: /about
     </div>
     <div class="about-section row shade add-padding-normal">
         <div class="col-md-5 offset-md-2 align-self-center transition hidden-right text_left">
-            <h2 class="add-padding-bottom-medium">About me:</h2>
+            <h2 class="add-padding-bottom-medium">About Me:</h2>
             <ul>
                 {% for item in site.data.about %}
                 <li>{{ item }}</li>
