remove under construction sign

--- a/articles.html
+++ b/articles.html
@@ -15,5 +15,5 @@ permalink: /articles
         </div>
         {% endfor %}
     </div>
-    <h1 class="under_construction text-center">Under Construction...</h1>
+    <!-- <h1 class="under_construction text-center">Under Construction...</h1> -->
 </div>
