--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@ title: Home
         </div>
         {% endfor %}
     </div>
-    <h1 class="under_construction text-center">Under Construction...</h1>
+    <!-- <h1 class="under_construction text-center">Under Construction...</h1> -->
 </div>
