--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ permalink: /about
         </div>
         <div class="col-md-7 align-self-center intro-text text_left">
             <h1>Hi, I'm Yueh 🐢</h1>
-            I'm a junior full stack developer but I have a life.
+            I'm a junior full stack developer and I have a cat.
             <p>
                 {% include socials.html %}
             </p>
