change articles list and update about page

--- a/about.html
+++ b/about.html
@@ -8,20 +8,20 @@ permalink: /about
 {% assign id = 3 %}
 {% include canvas.html %}
 <div class="about">
-    <div class="intro row transition hidden-right m-auto add-padding-normal">
+    <div class="intro row transition hidden-right m-auto add-padding-normal" data-threshold="0">
         <div class="col-md-3 offset-md-2 align-self-center">
             {% image yueh.png alt="My picture" class="avatar img-fluid img-thumbnail" %}
         </div>
         <div class="col-md-7 align-self-center intro-text text_left">
-            <h1>Hi, I'm Yueh 🐢</h1>
-            I'm a junior full stack developer and I have a cat.
+            <h1>I'm Yueh 🐢</h1>
+            I'm a junior full stack developer and I'm a man of culture.
             <p>
                 {% include socials.html %}
             </p>
         </div>
     </div>
     <div class="about-section row shade add-padding-normal">
-        <div class="col-md-5 offset-md-2 align-self-center transition hidden-right text_left">
+        <div class="col-md-5 offset-md-2 align-self-center transition hidden-right text_left" data-threshold="0">
             <h2 class="add-padding-bottom-medium">About Me:</h2>
             <ul>
                 {% for item in site.data.about %}
@@ -29,7 +29,7 @@ permalink: /about
                 {% endfor %}
             </ul>
         </div>
-        <div class="col-md-4 transition hidden-left">
+        <div class="col-md-4 transition hidden-left" data-threshold="0">
             <a href="{{ "assets/images/about/travel.jpg" | relative_url }}" data-fancybox="images"
                 data-caption="Hutou Mountain Park in Taiwan">
                 <img src="{{ "assets/images/about/travel.jpg" | relative_url }}" alt="Hutou Mountain Park in Taiwan"
@@ -39,21 +39,21 @@ permalink: /about
     </div>
     <div class="about-section add-padding-normal">
         <div class="row">
-            <div class="col-md-4 p-3 align-self-center transition hidden-right">
+            <div class="col-md-4 p-3 align-self-center transition hidden-right" data-threshold="0">
                 <a href="{{ "assets/images/about/group-picture.jpg" | relative_url }}" data-fancybox="gallery"
                     data-caption="Johor Bahru Forest City Sales Gallery in Malaysia">
                     <img src="{{ "assets/images/about/group-picture.jpg" | relative_url }}"
                         alt="Johor Bahru Forest City Sales Gallery in Malaysia" class="img-fluid img-thumbnail">
                 </a>
             </div>
-            <div class="col-md-4 p-3 align-self-center transition hidden-down">
+            <div class="col-md-4 p-3 align-self-center transition hidden-down" data-threshold="0">
                 <a href="{{ "assets/images/about/derp.jpg" | relative_url }}" data-fancybox="gallery"
                     data-caption="Singapore City Gallery">
                     <img src="{{ "assets/images/about/derp.jpg" | relative_url }}" alt="Singapore City Gallery"
                         class="img-fluid img-thumbnail">
                 </a>
             </div>
-            <div class="col-md-4 p-3 align-self-center transition hidden-left">
+            <div class="col-md-4 p-3 align-self-center transition hidden-left" data-threshold="0">
                 <a href="{{ "assets/images/about/asakusa-group.jpeg" | relative_url }}" data-fancybox="gallery"
                     data-caption="Sensō-ji in Tokyo, Asakusa">
                     <img src="{{ "assets/images/about/asakusa-group.jpeg" | relative_url }}"
@@ -62,14 +62,14 @@ permalink: /about
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 p-3 align-self-center transition hidden-right">
+            <div class="col-md-4 p-3 align-self-center transition hidden-right" data-threshold="0">
                 <a href="{{ "assets/images/about/otakuthon-performance.jpg" | relative_url }}" data-fancybox="gallery"
                     data-caption="Otakuthon 2017 Opening Ceremony Performance">
                     <img src="{{ "assets/images/about/otakuthon-performance.jpg" | relative_url }}"
                         alt="Otakuthon 2017 Opening Ceremony Performance" class="img-fluid img-thumbnail">
                 </a>
             </div>
-            <div class="col-md-4 p-3 align-self-center transition hidden-up">
+            <div class="col-md-4 p-3 align-self-center transition hidden-up" data-threshold="0">
                 <a href="{{ "assets/images/about/temple-camp.jpg" | relative_url }}" data-fancybox="gallery"
                     data-caption="Kids' Science Camp at the Fo Guang Shan Montreal Flower Garland Temple">
                     <img src="{{ "assets/images/about/temple-camp.jpg" | relative_url }}"
@@ -77,7 +77,7 @@ permalink: /about
                         class="img-fluid img-thumbnail">
                 </a>
             </div>
-            <div class="col-md-4 p-3 align-self-center transition hidden-left">
+            <div class="col-md-4 p-3 align-self-center transition hidden-left" data-threshold="0">
                 <a href="{{ "assets/images/about/violin-performance.jpg" | relative_url }}" data-fancybox="gallery"
                     data-caption="Montreal I Have a Song 2016 performance">
                     <img src="{{ "assets/images/about/violin-performance.jpg" | relative_url }}"
